--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,66 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* COMMON */
+body{
+    font-family: Helvetica;
+}
+
+img {
+    width: 100%;
+    display: block;
+}
+
+.container{
+    max-width: 1200px;
+    margin: auto;
+}
+
+/* HEADER */
+/* Logo */
+.logo{
+    width: 200px;
+    margin-top: 30px;
+}
+
+/* Nav */
+.nav_container{
+    background-color: #29b1dd;
+    padding: 20px 0px;
+    text-align: center;
+}
+.ms_label{
+    color: white;
+    text-transform: uppercase;
+}
+/* HEADER END*/
+
+/* MAIN */
+/* Section */
+.section_container{
+    background-color: lightgrey;
+}
+
+/* Icon container */
+.icon_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+.icon{
+    background-color: white;
+    width: calc( (100% / 5) - 20px);
+    text-align: center;
+    font-size: 18px;
+    margin: 10px 0px;
+    padding: 10px;
+    border-radius: 7px;
+    box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
+}
+.icon i{
+    font-size: 50px;
+}
+/* MAIN END */
