inserita costante con elemento del html, inserita funzione che stampi ogni icona su pagina, tramiter ciclo forEach, destrutturati gli elementi di un oggetto e sostituiti per ogni icona.

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ img {
 }
 
 /* Icon container */
-.icon_container{
+.icons_container{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
